# KotlinSamples

./: README.md
network/basic_tcp_client/: main.kt
network/basic_tcp_server/: main.kt
network/basic_udp_client/: main.kt
network/basic_udp_server/: main.kt
simple_gradle_cpp_project/: CMakeLists.txt  README.md
simple_gradle_cpp_project/app/: build.gradle.kts
simple_gradle_cpp_project/app/src/main/cpp/: Calculator.cpp  Calculator.h  CalculatorTest.cpp
simple_gradle_cpp_project/app/src/main/kotlin/org/example/: App.kt
simple_gradle_cpp_project/gradle/: libs.versions.toml
simple_gradle_project/: README.md  settings.gradle.kts
simple_gradle_project/app/: build.gradle.kts
simple_vscode_cpp_project/: README.md  build.sh
simple_vscode_cpp_project/src/: Main.kt  NativeSample.h  NativeSample.kt  hello.cpp
simple_vscode_project/: README.md
